# pyanime4k

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  setup_wheel_ubuntu.sh  setup_wheel_ubuntu_with_CUDA.sh
.github/workflows/: wheels.yml
pyanime4k/: __init__.py  ac.py  error.py  ffmpeg.py  ffmpeg_handler.py  upscale.py  utils.py
pyanime4k/anime4k/: pyanime4k.i
pyanime4k/wrapper/: __init__.py  acwrapper.py
src/pyanime4k/: __init__.py  image_io.py  info.py  processor.py  upscale.py
src/pyanime4k/pyac/: __init__.py
