[build-system]
requires = ["setuptools>=42", "scikit-build>=0.13", "cmake>=3.19", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyanime4k"
version = "3.0.0"
license = license = {text = "MIT", file = "LICENSE"}
requires-python = ">=3.8"
readme = "README.md"

[tool.cibuildwheel]
skip = ["pp*", "*win32", "*i686", "*musllinux*"]

[tool.cibuildwheel.linux]
before-all = "yum install -y ocl-icd ocl-icd-devel && mkdir -p src/Anime4KCPP && git clone https://github.com/TianZerL/Anime4KCPP.git src/Anime4KCPP"
test-command = "echo 'installed'"
